--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,1 +1,29 @@
-<p>Navbar</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <%= link_to root_path, class: "navbar-brand py-0" do %>
+    <%= image_pack_tag "media/images/logo.jpg", size: "120x60" %>
+  <% end %>
+  
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <%= link_to root_path, class: "nav-link text-white h5" do %>
+          Purchases
+        <% end %>
+      </li>
+      <li class="nav-item">
+        <%= link_to root_path, class: "nav-link text-white h5" do %>
+          Transactions
+        <% end %>
+      </li>
+      <li class="nav-item">
+        <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-white h5" do %>
+          Logout
+        <% end %>
+      </li>
+    </ul>
+  </div>
+</nav>
