--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <%= link_to root_path, class: "navbar-brand py-0" do %>
-    <%= image_pack_tag "media/images/logo.jpg", size: "120x60" %>
+    <%= image_pack_tag "media/images/fuel_logo.png", size: "120x60" %>
   <% end %>
   
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
