--- a/app/views/cards/new.html.slim
+++ b/app/views/cards/new.html.slim
@@ -1,8 +1,8 @@
 .row
   .col-12
     .card.card-default
-      = simple_form_for @bank_account, url: bank_accounts_path(@bank_account), html: { class: 'form' } do |f|
+      = simple_form_for @card, url: cards_path(@card), html: { class: 'form' } do |f|
         .card-header.card-header-border-bottom.d-flex.justify-content-between
-          h2.text-brand.pl-3 Add bank account information
+          h2.text-brand.pl-3 Add card information
         .card-body
           = render partial: 'form', locals: { f: f }
