--- a/app/views/bank_accounts/_form.html.slim
+++ b/app/views/bank_accounts/_form.html.slim
@@ -1,25 +1,25 @@
-fieldset.form-group
+fieldset.form-group.my-2
   label Bank name
-  span.req-field title="required" *
+  span.req-field.text-danger title="required" &nbsp;*
   = f.text_field :bank_name, pattern: '.*\S.*',
           autocomplete: 'off',
           class: 'form-control form-control-sm input-sm datepicker-filter', required: true
 
-fieldset.form-group
+fieldset.form-group.my-2
   label Routing number
-  span.req-field title="required" *
+  span.req-field.text-danger title="required" &nbsp;*
   = f.text_field :routing_number, pattern: '.*\S.*',
           class: 'form-control form-control-sm input-sm', required: true
 
-fieldset.form-group
+fieldset.form-group.my-2
   label Account holder name
-  span.req-field title="required" *
+  span.req-field.text-danger title="required" &nbsp;*
   = f.text_field :account_holder_name, pattern: '.*\S.*',
           class: 'form-control form-control-sm input-sm', required: true
 
-fieldset.form-group
+fieldset.form-group.my-2
   label Account number
-  span.req-field title="required" *
+  span.req-field.text-danger title="required" &nbsp;*
   = f.text_field :account_number, pattern: '.*\S.*',
           class: 'form-control form-control-sm input-sm', required: true
 
@@ -29,7 +29,7 @@ fieldset.form-group
     span.spinner-border.spinner-border-sm.mr-2.d-none aria-hidden="true" role="status"
     span = @bank_account.persisted? ? 'Update' : 'Save'
   = link_to root_path,
-          class: 'button btn btn-sm btn-secondary ml-2' do
+          class: 'button btn btn-sm btn-secondary ms-2' do
     i.mdi.mdi-close-circle.mr-2 role="status"
     span.spinner-border.spinner-border-sm.mr-2.d-none aria-hidden="true" role="status"
     span Discard
