--- a/app/views/bank_accounts/new.html.slim
+++ b/app/views/bank_accounts/new.html.slim
@@ -1,6 +1,6 @@
 .row
   .col-12
-    .card.card-default
+    .card.card-default.my-4
       = simple_form_for @bank_account, url: bank_accounts_path(@bank_account), html: { class: 'form' } do |f|
         .card-header.card-header-border-bottom.d-flex.justify-content-between
           h2.text-brand.pl-3 Add bank account information
