--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,43 +1,50 @@
-<h2>Sign up</h2>
+<h2 class="my-4">Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
+  <div class="form-group my-2">
     <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", required: true%>
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", required: true, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group my-2">
     <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", required: true %>
+    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", required: true, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group my-2">
     <%= f.label :payment_method %><br />
-    <%= f.select :payment_method, User.payment_methods.keys.to_a, autofocus: true, autocomplete: "payment_method", required: true, prompt: "Select a payment method" %>
+    <%= f.select :payment_method, 
+      User.payment_methods.keys.to_a, 
+      autofocus: true, 
+      autocomplete: "payment_method", 
+      required: true, 
+      prompt: "Select a payment method",
+      class: "form-control"
+    %>
   </div>
 
-  <div class="field">
+  <div class="form-group my-2">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", required: true %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", required: true, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group my-2">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password", required: true %>
+    <%= f.password_field :password, autocomplete: "new-password", required: true, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group my-2">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", required: true %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", required: true, class: "form-control" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="actions my-2">
+    <%= f.submit "Sign up", class: "btn btn-primary" %>
   </div>
 <% end %>
 
