--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,11 @@
   <body>
     <%= render 'application/navbar' %>
     <div class='container'>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <% flash.each do |type, message| %>
+        <div class="auto-hide alert <%= bootstrap_class_for(type) %>">
+          <%= message.html_safe %>
+        </div>
+      <% end %>
       <%= yield %>
     </div>
   </body>
