--- a/app/views/bank_accounts/edit.html.slim
+++ b/app/views/bank_accounts/edit.html.slim
@@ -1,1 +1,8 @@
-render "form"
+.row
+  .col-12
+    .card.card-default.my-4
+      = simple_form_for @bank_account, url: bank_account_path(@bank_account), html: { class: 'form' } do |f|
+        .card-header.card-header-border-bottom.d-flex.justify-content-between
+          h2.text-brand.pl-3 Edit bank account information
+        .card-body
+          = render partial: 'form', locals: { f: f }
