--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -13,7 +13,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to root_path, class: "nav-link text-white h5" do %>
+            <%= link_to purchases_path, class: "nav-link text-white h5" do %>
               Purchases
             <% end %>
           </li>
