--- a/app/views/purchases/edit.html.slim
+++ b/app/views/purchases/edit.html.slim
@@ -1,2 +1,8 @@
-h1 Purchases#edit
-p Find me in app/views/purchases/edit.html.slim
+.row
+  .col-12
+    .card.my-4.card-default
+      = simple_form_for @purchase, url: purchase_path(@purchase), html: { class: 'form' } do |f|
+        .card-header.card-header-border-bottom.d-flex.justify-content-between
+          h2.text-brand.pl-3 Edit purchase information
+        .card-body
+          = render partial: 'form', locals: { f: f }
