--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -10,8 +10,8 @@
     </button>
     
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <% if user_signed_in? %>
+      <% if user_signed_in? %>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <%= link_to purchases_path, class: "nav-link text-white h5" do %>
               Purchases
@@ -22,18 +22,27 @@
               Transactions
             <% end %>
           </li>
-          <li class="nav-item">
-            <%= link_to profile_path, class: "nav-link text-white h5" do %>
-              <%= "#{current_user.first_name} #{current_user.last_name}" %>
+        </ul>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item ">
+            <%= link_to profile_path, { class: "nav-link text-white h5 dropdown-toggle", id: "navbarScrollingDropdown", role: "button", "data-bs-toggle": "dropdown", "aria-expanded": "false" } do %>
+              <i class="mdi mdi-account-circle mdi-36px"></i>
             <% end %>
+            <ul class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="navbarScrollingDropdown">
+                <li class="nav-item">
+                  <%= link_to profile_path, class: "nav-link text-white h5" do %>
+                    <%= "#{current_user.first_name} #{current_user.last_name}" %>
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-white h5" do %>
+                    Logout
+                  <% end %>
+                </li>
+            </ul>
           </li>
-          <li class="nav-item">
-            <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-white h5" do %>
-              Logout
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
+        </ul>
+      <% end %>
     </div>
   </div>
 </nav>
