--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -19,7 +19,7 @@
           </li>
           <li class="nav-item">
             <%= link_to root_path, class: "nav-link text-white h5" do %>
-              Transactions
+              Payments
             <% end %>
           </li>
         </ul>
