--- a/app/views/cards/_form.html.slim
+++ b/app/views/cards/_form.html.slim
@@ -24,6 +24,9 @@ fieldset.form-group.my-2
   = f.date_field :expiration_date,
           class: 'form-control input-sm form-control-sm', required: true
 
+fieldset
+  = f.hidden_field :is_default, value: @payment.nil? ? true : false
+
 .form-footer.mt-4.pt-2.border-top.d-flex.justify-content-center
   = button_tag type: 'submit', class: 'button btn btn-sm btn-primary' do
     i class = " mdi #{ @card.persisted? ? 'mdi-arrow-up-bold-circle' : 'mdi-content-save'} mt-0 mr-2" role="status"
